--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: vitalvida-api
     env: php
+    plan: free
     buildCommand: |
       composer install --no-dev --optimize-autoloader
       php artisan config:cache
@@ -19,6 +20,10 @@ services:
         generateValue: true
       - key: DB_CONNECTION
         value: pgsql
+      - key: DATABASE_URL
+        fromDatabase:
+          name: vitalvida-db
+          property: connectionString
 
 databases:
   - name: vitalvida-db
