--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,13 @@
 services:
   - type: web
-    name: vitalvida-api
+    name: vitalvida-backend
     env: php
     plan: free
     buildCommand: |
       composer install --no-dev --optimize-autoloader
       php artisan config:cache
       php artisan route:cache
-      php artisan view:cache
     startCommand: |
-      php artisan migrate --force
       php artisan serve --host=0.0.0.0 --port=$PORT
     envVars:
       - key: APP_ENV
@@ -17,13 +15,11 @@ services:
       - key: APP_DEBUG
         value: false
       - key: APP_KEY
-        generateValue: true
+        value: base64:CWlwlok768zHJ4XLwN945mV+Vj2kJAgIrcCuX9mZlaU=
       - key: DB_CONNECTION
-        value: pgsql
-      - key: DATABASE_URL
-        fromDatabase:
-          name: vitalvida-db
-          property: connectionString
+        value: sqlite
+      - key: DB_DATABASE
+        value: /tmp/database.sqlite
 
 databases:
   - name: vitalvida-db
