--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1",
-        "tymon/jwt-auth": "^2.0",
-        "laravel/sanctum": "^4.0",
         "guzzlehttp/guzzle": "^7.8",
-        "spatie/laravel-permission": "^6.0"
+        "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.1",
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-permission": "^6.0",
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
