Fix database connection using DATABASE_URL

--- a/.env.production
+++ b/.env.production
@@ -5,10 +5,10 @@ APP_DEBUG=false
 APP_URL=https://vitalvida-api-production-e500.up.railway.app
 
 LOG_CHANNEL=stderr
-LOG_LEVEL=error
+LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
 DATABASE_URL=${DATABASE_URL}
 
-SESSION_DRIVER=database
-QUEUE_CONNECTION=database
+SESSION_DRIVER=file
+QUEUE_CONNECTION=sync
