--- a/.env.production
+++ b/.env.production
@@ -7,8 +7,11 @@ APP_URL=https://vitalvida-api-production-e500.up.railway.app
 LOG_CHANNEL=stderr
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DATABASE_URL=${DATABASE_URL}
-
+# Use file-based cache instead of database
+CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_CONNECTION=sync
+
+# Database config (for when we need it)
+DB_CONNECTION=pgsql
+DATABASE_URL=${DATABASE_URL}
