SECURITY: Remove hardcoded APP_KEY - use Railway env vars only

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 APP_NAME=VitalVida
 APP_ENV=production
-APP_KEY=base64:***REMOVED***=
+APP_KEY=base64:ji282hM3WR40ApAxK8gp1pLIQQzselDA6qjDNb4v+1A=
 APP_DEBUG=false
 APP_URL=https://vitalvida-api-production-e500.up.railway.app
 
