--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,12 @@
 providers = ["php"]
 
-[phases.build]
-cmds = ["composer install --no-dev --optimize-autoloader --ignore-platform-req=ext-exif --ignore-platform-req=php-64bit"]
-
-[phases.install]
-cmds = ["php artisan config:cache", "php artisan route:cache"]
-
 [variables]
 PHP_VERSION = "8.2"
+
+[phases.build]
+cmds = [
+    "composer install --no-dev --optimize-autoloader --ignore-platform-reqs"
+]
+
+[phases.start]
+cmd = "bash start.sh"
